automation/services/mina-bp-stats/leaderboard-ui/web-dev/php/assets/css/responsive.css
@media not all and (min-resolution:.001dpcm)
{ @supports (-webkit-appearance:none) and (stroke-color:transparent) {

    .delegationButton.nav-link.active,
    .delegationButton .show>.nav-link{
      line-height: 10px;
    }
    .form-control.mb-2.mt-2.search-box  {
        line-height: 11px;
    }
    .pagination>.page-item>.page-link {
        line-height: 25px;
    }
    a.page-link  {
        line-height: 12px;
    }
    .table td  {
        line-height: 48px;
    }
    .nav-pills .nav-link.active,
    .nav-pills .show>.nav-link{
        line-height: 35px;
    }
}}

@media screen and (max-width: 600px) {
    .delegationButton.nav-link.active,
    .delegationButton .show>.nav-link{
      text-align : center;
      align-items: center;
      vertical-align: middle;
    }
    .form-control.mb-2.mt-2.search-box  {
        text-align : center;
        align-items: center;
        vertical-align: middle;
    }
    a.page-link  {
        text-align : center;
        align-items: center;
        vertical-align: middle;
    }
    .table td  {
        text-align : center;
        align-items: center;
        vertical-align: middle;
    }
}
  

@media (max-width: 410px) {
    .mina-banner{
        height: 52px;
        padding: 3px 2.5rem;
    }
    .bannerAnnouncement{
        line-height: 1.5rem;
    }
}
@media (max-width: 575.98px) {
    .container {
        width: 91%;
        margin-right: 10px;
        margin-left: 15px;
        align-content: center;
    }
    .performance-Container {
        margin-right: 0px;
        margin-left: 0px;
        padding-right: 0px;
        padding-left: 0px;

    }
    /* for delegation policy */
    .row>p {
        text-align: justify;
    }
    .h1,
    h1 {
        font-size: 2.0rem;
        text-align: center;
    }
    .toggle-button {
        display: flex;
    }
    .No-colaps {
        display: flex;
    }
    .navbar-nav {
        flex-direction: row;
        justify-content: space-around;
    }
    /* leader Board Responcive */
    .Link-responcive>.row {
        justify-content: left;
    }
    .Link-responcive>.row>.ml-auto
    {
        margin-left: 0px!important
    }
    .Responcive-Bottom-Padding>.topButton {
        margin-bottom: 0rem!important;
    }
    .topButton {
        margin-bottom: 0rem!important;
    }
    .topButton>.ml-auto {
        margin-left: 0rem!important;
    }
    .table td+td+td {
        margin-left: 0px!important;
        padding-left: 0px!important;
        text-align: center;
    }
    .table thead th {
        vertical-align: middle;
    }
    .text-left {
        text-align: unset!important;
    }
    /* Performance Tracker Responcive Css */
    .performance-Container {
        width: auto!important;
    }
    .mina-top-right-button {
        margin-left: unset!important;
    }
    .Responcive-Bottom-Padding>.Link-responcive {
        margin-bottom: 3rem!important;
    }
    .subheader>p {
        font-size: 24px;
        line-height: 35px;
        text-align: center;
        margin-bottom:0px ;
    }
    .performance-Container>.responcive-tab>.row {
        display: flex;
        flex-direction: column;
    }
    .row>a.mr-3 {
        margin-right: 0rem!important;
    }
    .bottom-plate-tab {
        display: none!important;
    }
    /* .right-box {
        width: 257px;
    } */
    .delegation-Bottom-Button>.bottomPlate {
        left: 4px!important;
        top: -47px;
        width: 231px;
    }
    .delegation-Bottom-Button>.delegationButton {
        height: 46px;
        left: 5px!important;
        top: -32px;
    }
    .policyInfo-Bottom-Button>.bottomPlate {
        left: 4px!important;
        top: -47px;
        width: 231px;
    }
    .policyInfo-Bottom-Button>.delegationButton {
        height: 46px;
        left: 5px!important;
        top: -32px;
    }
    .table td {
        font-size: 18px;
        line-height: 27px;
        color: #000000;
        text-align: center;
    }
    /* for Image to Design */
    .Margin-right-for-text {
        margin-right: 38rem;
    }
    .wrap {
        margin: 18vh auto ;
    }
    .Mobile-Tab-view{
        display: block;
        margin-bottom: 5px!important;
        
        
        
    }
    .container.pr-0.pl-0.mt-0.mb-5.tab-content{
        margin-top: 20px!important;
    }
    .pagination {
        margin-top: -170px!important;
        margin-bottom: 50px!important;
        margin-left: 8px!important;
    }
    .pagination>li.ml-5{
        margin-left: 1rem!important;
    }
    .performance-Container>.justify-content-end {
        justify-content: center!important;
    }
}
/* ... */

